<resources>
  <string name="app_name">SonyLivSampleApp</string>

  <!-- language button -->
  <string name="txt_english" translatable="false">English</string>
  <string name="txt_hindi" translatable="false">Hindi</string>
  <string name="txt_bangali" translatable="false">Bangla</string>

  <!-- hello world text view key & value -->
  <string name="txt_hello_world">Hello World</string>
  <string name="key_hello_world" translatable="false">txt_hello_world</string>

  <!-- welcome text view key & value -->
  <string name="key_welcome" translatable="false">txt_welcome</string>
  <string name="txt_welcome">Welcome to Sony Liv entertainment world</string>
</resources>