<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    >


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="40dp"
      android:orientation="horizontal"
      android:weightSum="3"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      >

    <Button
        android:id="@+id/btnEnglish"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:text="@string/txt_english"
        tools:ignore="ButtonStyle"
        />

    <Button
        android:id="@+id/btnBangali"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:text="@string/txt_bangali"
        tools:ignore="ButtonStyle"
        />

    <Button
        android:id="@+id/btnHindi"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:text="@string/txt_hindi"
        tools:ignore="ButtonStyle"
        />

  </LinearLayout>

  <TextView
      android:id="@+id/txtHelloWorld"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/txt_hello_world"
      android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <TextView
      android:id="@+id/txtWelcome"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/txt_welcome"
      android:textSize="16sp"
      android:layout_marginTop="15dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtHelloWorld"
      />

</androidx.constraintlayout.widget.ConstraintLayout>